@@ -1,5 +1,8 @@
 package ua.tqs.services;
 
+import io.micrometer.core.instrument.Counter;
+import io.micrometer.core.instrument.MeterRegistry;
+import io.micrometer.core.instrument.Timer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ua.tqs.login.JwtUtil;
@@ -10,89 +13,118 @@ import ua.tqs.repositories.SlotRepository;
 import ua.tqs.repositories.UserRepository;
 import ua.tqs.dto.ReservationRequestDTO;
 import ua.tqs.dto.ReservationResponseDTO;
-import java.util.stream.Collectors;
-import java.util.List;
 
 import java.time.LocalDateTime;
+import java.util.List;
 import java.util.Optional;
 
 @Service
 public class ReservationService {
+    private final MeterRegistry meterRegistry;
+    private final ReservationRepository reservationRepository;
+    private final SlotRepository slotRepository;
+    private final UserRepository userRepository;
+    private final JwtUtil jwtUtil;
+    private final Counter totalReservations;
+    private final Counter activeReservations;
+    private final Counter canceledReservations;
+    private final Timer reservationCreationTimer;
 
     @Autowired
-    private ReservationRepository reservationRepository;
+    public ReservationService(MeterRegistry meterRegistry,
+                            ReservationRepository reservationRepository,
+                            SlotRepository slotRepository,
+                            UserRepository userRepository,
+                            JwtUtil jwtUtil) {
+        this.meterRegistry = meterRegistry;
+        this.reservationRepository = reservationRepository;
+        this.slotRepository = slotRepository;
+        this.userRepository = userRepository;
+        this.jwtUtil = jwtUtil;
 
-    @Autowired
-    private SlotRepository slotRepository;
+        // Initialize grafana metrics
+        this.totalReservations = Counter.builder("reservations.total")
+                .description("Total number of reservations")
+                .register(meterRegistry);
 
-    @Autowired
-    private UserRepository userRepository;
+        this.activeReservations = Counter.builder("reservations.active")
+                .description("Number of active reservations")
+                .register(meterRegistry);
 
-    @Autowired
-    private JwtUtil jwtUtil;
+        this.canceledReservations = Counter.builder("reservations.canceled")
+                .description("Number of canceled reservations")
+                .register(meterRegistry);
+
+        this.reservationCreationTimer = Timer.builder("reservation.creation.time")
+                .description("Time taken to create a reservation")
+                .register(meterRegistry);
+    }
 
     public Optional<ReservationResponseDTO> createReservation(ReservationRequestDTO dto) {
-        Optional<User> userOpt = userRepository.findById(dto.getUserId());
-        Optional<Slot> slotOpt = slotRepository.findById(dto.getSlotId());
+        return reservationCreationTimer.record(() -> {
+            try {
+                Optional<User> userOpt = userRepository.findById(dto.getUserId());
+                Optional<Slot> slotOpt = slotRepository.findById(dto.getSlotId());
 
-        if (userOpt.isEmpty() || slotOpt.isEmpty()) return Optional.empty();
+                if (userOpt.isEmpty() || slotOpt.isEmpty()) {
+                    return Optional.empty();
+                }
 
-        Slot slot = slotOpt.get();
-        if (slot.isReserved()) return Optional.empty();
+                Slot slot = slotOpt.get();
+                if (slot.isReserved()) {
+                    return Optional.empty();
+                }
 
-        slot.setReserved(true);
-        slotRepository.save(slot);
+                slot.setReserved(true);
+                slotRepository.save(slot);
 
-        Station station = slot.getStation();
-        double discount = (station.isDiscountActive()) ? station.getDiscountValue() : 0.0;
+                Station station = slot.getStation();
+                double discount = station.isDiscountActive() ? station.getDiscountValue() : 0.0;
 
-        Reservation reservation = new Reservation();
-        reservation.setUser(userOpt.get());
-        reservation.setSlot(slot);
-        reservation.setStatus(ReservationStatus.ACTIVE);
-        reservation.setCreationDate(LocalDateTime.now());
-        reservation.setStartTime(dto.getStartTime());
-        reservation.setStartDate(dto.getStartTime().toLocalDate());
-        reservation.setDurationMinutes(dto.getDurationMinutes());
+                Reservation reservation = new Reservation();
+                reservation.setUser(userOpt.get());
+                reservation.setSlot(slot);
+                reservation.setStatus(ReservationStatus.ACTIVE);
+                reservation.setCreationDate(LocalDateTime.now());
+                reservation.setStartTime(dto.getStartTime());
+                reservation.setDurationMinutes(dto.getDurationMinutes());
+                reservation.setConsumptionKWh(dto.getConsumptionKWh());
 
-        reservation.setConsumptionKWh(dto.getConsumptionKWh());
-        double basePrice = dto.getPricePerKWh() * dto.getConsumptionKWh();
-        reservation.setTotalCost(basePrice * (1 - discount));
-        reservation.setPaid(false);
+                double basePrice = dto.getPricePerKWh() * dto.getConsumptionKWh();
+                reservation.setTotalCost(basePrice * (1 - discount));
+                reservation.setPaid(false);
 
-        Reservation saved = reservationRepository.save(reservation);
+                Reservation saved = reservationRepository.save(reservation);
+                totalReservations.increment();
+                activeReservations.increment();
 
-        ReservationResponseDTO response = new ReservationResponseDTO();
-        response.setId(saved.getId());
-        response.setUserId(saved.getUser().getId());
-        response.setSlotId(saved.getSlot().getId());
-        response.setState(saved.getStatus().name());
-        response.setConsumptionKWh(saved.getConsumptionKWh());
-        response.setTotalCost(saved.getTotalCost());
-        response.setPaid(saved.isPaid());
-        response.setStartTime(saved.getStartTime());
-        response.setDurationMinutes(saved.getDurationMinutes());
-        response.setStationName(slot.getStation().getName());
-        response.setChargingType(slot.getChargingType().name());
-        response.setCreatedAt(saved.getCreationDate());
-
-        return Optional.of(response);
+                return Optional.of(mapToResponseDTO(saved));
+            } catch (Exception e) {
+                meterRegistry.counter("reservations.errors").increment();
+                return Optional.empty();
+            }
+        });
     }
 
     public boolean cancelReservation(Long reservationId) {
         Optional<Reservation> reservationOpt = reservationRepository.findById(reservationId);
 
-        if (reservationOpt.isEmpty()) return false;
+        if (reservationOpt.isEmpty() ||
+            reservationOpt.get().getStatus() != ReservationStatus.ACTIVE) {
+            return false;
+        }
 
         Reservation reservation = reservationOpt.get();
-        if (reservation.getStatus() != ReservationStatus.ACTIVE) return false;
-
         Slot slot = reservation.getSlot();
         slot.setReserved(false);
         slotRepository.save(slot);
 
         reservation.setStatus(ReservationStatus.CANCELED);
         reservationRepository.save(reservation);
+
+        activeReservations.increment(-1);
+        canceledReservations.increment();
+
         return true;
     }
 
@@ -105,23 +137,9 @@ public class ReservationService {
         }
 
         List<Reservation> reservations = reservationRepository.findByUser(userOpt.get());
-
-        return reservations.stream().map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setStartTime(reservation.getStartTime());
-            dto.setDurationMinutes(reservation.getDurationMinutes());
-
-            return dto;
-        }).collect(Collectors.toList());
+        return reservations.stream()
+                .map(this::mapToResponseDTO)
+                .toList();
     }
 
     public double getTotalRevenue() {
@@ -131,44 +149,25 @@ public class ReservationService {
     }
 
     public List<ReservationResponseDTO> getAllReservations() {
-        return reservationRepository.findAll().stream().map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setUserEmail(reservation.getUser().getEmail());
-            dto.setUserName(reservation.getUser().getName());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setCreatedAt(reservation.getCreationDate());
-            return dto;
-        }).collect(Collectors.toList());
+        return reservationRepository.findAll().stream()
+                .map(this::mapToResponseDTO)
+                .toList();
     }
 
-    public Optional<ReservationResponseDTO> getReservationById(Long id) {
-        return reservationRepository.findById(id).map(reservation -> {
-            ReservationResponseDTO dto = new ReservationResponseDTO();
-            dto.setId(reservation.getId());
-            dto.setUserId(reservation.getUser().getId());
-            dto.setUserEmail(reservation.getUser().getEmail());
-            dto.setUserName(reservation.getUser().getName());
-            dto.setSlotId(reservation.getSlot().getId());
-            dto.setState(reservation.getStatus().name());
-            dto.setConsumptionKWh(reservation.getConsumptionKWh());
-            dto.setTotalCost(reservation.getTotalCost());
-            dto.setPaid(reservation.isPaid());
-            dto.setStationName(reservation.getSlot().getStation().getName());
-            dto.setChargingType(reservation.getSlot().getChargingType().name());
-            dto.setCreatedAt(reservation.getCreationDate());
-            dto.setStartTime(reservation.getStartTime());
-            dto.setDurationMinutes(reservation.getDurationMinutes());
-            return dto;
-        });
+    private ReservationResponseDTO mapToResponseDTO(Reservation reservation) {
+        ReservationResponseDTO dto = new ReservationResponseDTO();
+        dto.setId(reservation.getId());
+        dto.setUserId(reservation.getUser().getId());
+        dto.setSlotId(reservation.getSlot().getId());
+        dto.setState(reservation.getStatus().name());
+        dto.setConsumptionKWh(reservation.getConsumptionKWh());
+        dto.setTotalCost(reservation.getTotalCost());
+        dto.setPaid(reservation.isPaid());
+        dto.setStationName(reservation.getSlot().getStation().getName());
+        dto.setChargingType(reservation.getSlot().getChargingType().name());
+        dto.setCreatedAt(reservation.getCreationDate());
+        dto.setStartTime(reservation.getStartTime());
+        dto.setDurationMinutes(reservation.getDurationMinutes());
+        return dto;
     }
-
-
 }
